--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         
 <!-- foto -->
         <h4>Le foro</h4>
-        <img src="./london-400x400-compressor_0.jpg" alt="">
-        <img src="./evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg" alt="">
-
+        <img src="img/london-400x400-compressor_0.jpg" alt="">
+        <img src="img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg" alt="">
+        
 <!-- finoto -->
 </body>
 </html>
